2005-07-23  Hynek Hanke  <hanke@chopin>

	* src/audio/alsa.c (alsa_play): Initialize hw_params each time before

2005-07-10  Hynek Hanke  <hanke@chopin>

	* src/audio/alsa.c (ERR): New macro. Use it, when appropriate.
	(_alsa_open): Output device name too when impossible to open.
	No mutexes now necessary.
	(_alsa_open): Create a pipe for communication of stop requests to
	the other thread.
	(_alsa_close): Close the pipe.
	Improved logging.
	(wait_for_poll): New function.
	(ERROR_EXIT): New macro. Used instead of ``goto error_exit''.
	(alsa_play): The while loop modified for the new mechanism (see comments).

2005-07-04  Hynek Hanke  <hanke@chopin>

	* src/server/config.c (cb_EndClient): Assign NULL to cl_spec_section.

	* src/server/server.c (last_messge_id): Start counting from 1.
	(queue_message): Changed return value to message uid on success, 0 on failure.

2005-07-02  Hynek Hanke  <hanke@chopin>

	* src/c/clients/say/options.c (options_print_version): fixed copyright notice

2005-07-02  Hynek Hanke  <hanke@chopin>

	* config/clients/emacs.conf: Change nothing by default.

	* config/speechd.conf.in: Load the clients specific configuration files for Emacs and Gnome Speech by default.

	* config/clients/gnome-speech.conf: Local configuration for gnome speech.

	* config/modules/festival.conf: Mention FestivalALSADEvice

	* src/audio/alsa.c (alsa_play): Bug: snd_pcm_format_silence_8() -> snd_pcm_format_silence()

	* src/audio/spd_audio.c (spd_audio_open): Typo.

	* src/modules/festival.c (module_load): Add FestivalALSADevice parameter.

	* src/audio/alsa.c (alsa_open): New parameter: alsa device.

2005-06-10  Hynek Hanke  <hanke@brailcom.org>

	* src/audio/alsa.c: Alsa now works in blocking mode (thx Gary Cramblitt)
	MSG() new macro.
	Better logging mechanism.

	* config/modules/: DebugFile option moved to speechd.conf.

	* config/speechd.conf.in: main and custom logfiles default path modified.
